src/style.css
@font-face {
  font-family: "Inter";
  src:
    url("./fonts/Inter-Italic.woff2") format("woff2"),
    url("./fonts/Inter-Italic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Inter";
  src:
    url("./fonts/Inter-Regular.woff2") format("woff2"),
    url("./fonts/Inter-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Inter", Arial, Helvetica, sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  padding: 1rem;
  background: oklch(0.55 0.12 250);
}

.main-nav {
  display: grid;
  gap: 1rem;
}

@media (min-width: 750px) {
  .main-nav {
    grid-auto-flow: column;
    grid-auto-columns: 8rem;
    justify-content: center;
  }
}

.main-nav__button {
  cursor: pointer;
  font-size: 0.9rem;
  font-weight: bold;
  padding: 0.3em;
  background: oklch(1 0 0);
  border: none;
  border-radius: 1em;
}

.main-nav__button:hover,
.main-nav__button:focus-visible {
  background: oklch(0.9 0 0);
}

.main-nav__button:active {
  background: oklch(0.8 0 0);
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  margin: 0 auto;
  padding: 1rem;
  width: min(1000px, 100%);
  background: oklch(0.9 0.1 250);
}

.content__paragraph {
  width: min(75ch, 100%);
}

.content__image,
.card__image {
  width: 100%;
  height: auto;
  max-width: 500px;
  display: block;
  border: 5px solid oklch(1 0 0);
  border-radius: 1rem;
}

.card {
  margin: 1rem 0;
}

.card__name {
  font-size: 1.2rem;
  font-style: italic;
  margin-bottom: 0.5rem;
}

